--- a/templates/Revaa/crm_leads_page.html
+++ b/templates/Revaa/crm_leads_page.html
@@ -8,64 +8,29 @@ Leads Page | Revaa Digital Solution
 {% block content %}
 {% include 'inc/messages.html' %}
 <section class="content">
+    {% if leadslistpage %}
     <h4>Leads Page</h4>
-<div class="d-flex align-items-center justify-content-between my-4">
-    
-    {% if All_Leads %}
-        <form action="{% url 'ledas_filter' %}" method="post">
-            {% csrf_token %}
-            <div class="w-50 d-flex align-items-center">
-                <div class="form-outline me-2" data-mdb-input-init>
-                    <input type="date" id="Fromdate" name="Fromdate" class="form-control" />
-                    <label class="form-label" for="Fromdate">From Date</label>
-                </div>
-                <div class="form-outline" data-mdb-input-init>
-                    <input type="date" id="todate" name="todate" class="form-control" />
-                    <label class="form-label" for="todate">To Date</label>
-                </div>
-                <input type="submit" value="Filter" class="btn btn-primary mx-2">
-            </div>
-            <p class="p-0 m-0 mt-2 small text-primary">Filter only any 30 days</p>
-        </form>
-        
-        <script>
-            document.addEventListener('DOMContentLoaded', (event) => {
-                const fromDateInput = document.getElementById('Fromdate');
-                const toDateInput = document.getElementById('todate');
-        
-                const setDateRange = () => {
-                    if (fromDateInput.value) {
-                        let fromDate = new Date(fromDateInput.value);
-                        let toDate = new Date(fromDate);
-                        toDate.setDate(fromDate.getDate() + 30);
-                        toDateInput.value = toDate.toISOString().split('T')[0];
-                    }
-        
-                    if (toDateInput.value) {
-                        let toDate = new Date(toDateInput.value);
-                        let fromDate = new Date(toDate);
-                        fromDate.setDate(toDate.getDate() - 30);
-                        fromDateInput.value = fromDate.toISOString().split('T')[0];
-                    }
-                };
-        
-                fromDateInput.addEventListener('change', () => {
-                    let fromDate = new Date(fromDateInput.value);
-                    let toDate = new Date(fromDate);
-                    toDate.setDate(fromDate.getDate() + 30);
-                    toDateInput.value = toDate.toISOString().split('T')[0];
-                });
-        
-                toDateInput.addEventListener('change', () => {
-                    let toDate = new Date(toDateInput.value);
-                    let fromDate = new Date(toDate);
-                    fromDate.setDate(toDate.getDate() - 30);
-                    fromDateInput.value = fromDate.toISOString().split('T')[0];
-                });
-                setDateRange();
-            });
-        </script>
     {% endif %}
+    {% if thismonthteads %}
+    <h4>Monthly Leads</h4>
+    {% endif %}
+    {% if span_leads_count %}
+    <h4>Last 30 Leads</h4>
+    {% endif %}
+    {% if Commercial_leads %}
+    <h4>Commercial Leads</h4>
+    {% endif %}
+    {% if Future_prospective %}
+    <h4>Future Prospective Leads</h4>
+    {% endif %}
+    {% if Prospective_Leads %}
+    <h4>Prospective Leads</h4>
+    {% endif %}
+    {% if last30days %}
+    <h4>Prospective Leads</h4>
+    {% endif %}
+<div>
+    {% if leadslistpage %}
     <div>
         {% include 'alertform/new_Leads.html' %}
         <button type="button" class="btn btn-link btn-sm btn-rounded bg-light" data-toggle="modal"
@@ -81,6 +46,62 @@ Leads Page | Revaa Digital Solution
             data</a>
         {% endif %}
     </div>
+    {% endif %}
+</div>
+<div class="mt-3">
+    {% if All_Leads %}
+        <form action="{% url 'ledas_filter' %}" method="post">
+            {% csrf_token %}
+            <div class="row">
+                <div class="col-md-2 mb-2">
+                    <div class="form-outline me-2" data-mdb-input-init>
+                        <input type="date" id="Fromdate" name="Fromdate" class="form-control" />
+                        <label class="form-label" for="Fromdate">From Date</label>
+                    </div>
+                </div>
+                <div class="col-md-2 mb-2">
+                    <div class="form-outline" data-mdb-input-init>
+                        <input type="date" id="todate" name="todate" class="form-control" />
+                        <label class="form-label" for="todate">To Date</label>
+                    </div>
+                </div>
+                <div class="col-md-2 mb-2">
+                    <div class="form-outline" data-mdb-input-init>
+                        <input type="date" id="todate" name="todate" class="form-control" />
+                        <label class="form-label" for="todate">To Date</label>
+                    </div>
+                </div>
+                <div class="col-md-2 mb-2">
+                    <div class="form-outline" data-mdb-input-init>
+                        <input type="date" id="todate" name="todate" class="form-control" />
+                        <label class="form-label" for="todate">To Date</label>
+                    </div>
+                </div>
+                <div class="col-md-2 mb-2">
+                    <div class="form-outline" data-mdb-input-init>
+                        <input type="date" id="todate" name="todate" class="form-control" />
+                        <label class="form-label" for="todate">To Date</label>
+                    </div>
+                </div>
+                <div class="col-md-2 mb-2">
+                    <div class="form-outline" data-mdb-input-init>
+                        <input type="date" id="todate" name="todate" class="form-control" />
+                        <label class="form-label" for="todate">To Date</label>
+                    </div>
+                </div>
+                <div class="col-md-2 mb-2">
+                    <div class="form-outline" data-mdb-input-init>
+                        <input type="date" id="todate" name="todate" class="form-control" />
+                        <label class="form-label" for="todate">To Date</label>
+                    </div>
+                </div>
+                <div class="col-md-2 mb-2">
+                    <input type="submit" value="Filter" class="btn btn-primary mx-2">
+                </div>
+            </div>
+            
+        </form>
+    {% endif %}
 </div>
 
 <hr>
