--- a/templates/inc/new_sidebar.html
+++ b/templates/inc/new_sidebar.html
@@ -38,10 +38,12 @@
                     <i class='bx bx-user nav_icon'></i> 
                     <span class="nav_name">Leads</span> 
                 </a>
+                {% if false %}
                 <a href="{% url 'coustomer' %}" class="nav_link {{customer}}"> 
                     <i class='bx bx-group  nav_icon'></i>
                     <span class="nav_name">Customers</span> 
                 </a>
+                {% endif %}
             </div>
         </div>
         <div>
