--- a/templates/inc/single_lead_edit_page.html
+++ b/templates/inc/single_lead_edit_page.html
@@ -206,6 +206,8 @@
 </section>
 <div class="d-flex align-items-center justify-content-end mb-3">
     <button type="submit" class="btn btn btn-primary mx-2">Save Changes</button>
+    {% if False %}
     <a href="{% url 'convertocustomer' id=get_data.pk %}" class="btn btn-primary">Save as customer</a>
+    {% endif %}
 </div>
 </form>
