--- a/templates/Revaa/crm_index.html
+++ b/templates/Revaa/crm_index.html
@@ -11,7 +11,7 @@ Dashboard | Revaa Degital Solition
 <div class="row">
     <div class="col-8">
         <div class="row">
-            <h3 class="container">Dashboard</h3>
+            <h3 class="container fw-bold">Dashboard</h3>
             <div class="col-sm-4">
                 <a href="{% url 'leads' %}">
                     <div class="box bg-light2 mb-3">
