--- a/templates/Revaa/crm_leads_page.html
+++ b/templates/Revaa/crm_leads_page.html
@@ -3,73 +3,53 @@
 
 {% block title %}
 {% if leadslistpage %}
-    Leads Page
-    {% endif %}
-    {% if thismonthleads %}
-    Monthly Leads
-    {% endif %}
-    {% if last30days %}
-    Last 30 Leads
-    {% endif %}
-    {% if last_30_days_prospective %}
-    Last 30 days Prospective Leads
-    {% endif %}
-    {% if Span_Leads %}
-    Span Leads
-    {% endif %}
-    {% if prospective_leads %}
-    Prospective Leads
-    {% endif %}
-    {% if monthly_prospective %}
-    Monthly Prospective Leads
-    {% endif %} | Revaa Digital Solution
+Leads Page
+{% endif %}
+{% if thismonthleads %}
+Monthly Leads
+{% endif %}
+{% if last30days %}
+Last 30 Leads
+{% endif %}
+{% if last_30_days_prospective %}
+Last 30 days Prospective Leads
+{% endif %}
+{% if Span_Leads %}
+Span Leads
+{% endif %}
+{% if prospective_leads %}
+Prospective Leads
+{% endif %}
+{% if monthly_prospective %}
+Monthly Prospective Leads
+{% endif %} | Revaa Digital Solution
 {% endblock %}
 
 {% block content %}
 {% include 'inc/messages.html' %}
 <section class="content">
-    {% if leadslistpage %}
-    <h4>Leads Page</h4>
-    {% endif %}
-    {% if thismonthleads %}
-    <h4>Monthly Leads</h4>
-    {% endif %}
-    {% if last30days %}
-    <h4>Last 30 Leads</h4>
-    {% endif %}
-    {% if prospective_leads %}
-    <h4>Prospective Leads</h4>
-    {% endif %}
-    {% if monthly_prospective %}
-    <h4>Monthly Prospective Leads</h4>
-    {% endif %}
-    {% if last_30_days_prospective %}
-    <h4>Last 30 days Prospective Leads</h4>
-    {% endif %}
-    {% if Span_Leads %}
-    <h4>Span Leads</h4>
-    {% endif %}
-<div>
-    {% if leadslistpage %}
+    <div class="d-flex align-items-center justify-content-between">
+        <h4 class="fw-bold">Leads Page</h4>
     <div>
-        {% include 'alertform/new_Leads.html' %}
-        <button type="button" class="btn btn-link btn-sm btn-rounded bg-light" data-toggle="modal"
-            data-target="#new_Leads_add_container"> New Leads </button>
+        {% if leadslistpage %}
+        <div>
+            {% include 'alertform/new_Leads.html' %}
+            <button type="button" class="btn btn-link btn-sm btn-rounded bg-light" data-toggle="modal"
+                data-target="#new_Leads_add_container"> New Leads </button>
 
-        {% include 'alertform/import_data.html' %}
-        <button type="button" class="btn btn-link btn-sm btn-rounded bg-light" data-toggle="modal"
-            data-target="#importdata">
-            Import
-            data </button>
-        {% if All_Leads %}
-        <a type="button" class="btn btn-link btn-sm btn-rounded bg-light" href="{% url 'export_leads' %}">Export
-            data</a>
+            {% include 'alertform/import_data.html' %}
+            <button type="button" class="btn btn-link btn-sm btn-rounded bg-light" data-toggle="modal" data-target="#importdata"> Import data </button>
+            {% if All_Leads %}
+            <a type="button" class="btn btn-link btn-sm btn-rounded bg-light" href="{% url 'export_leads' %}">Export
+                data</a>
+            {% endif %}
+        </div>
         {% endif %}
     </div>
-    {% endif %}
-</div>
-<div class="mt-3">
-    {% if All_Leads %}
+    </div>
+    
+    <div class="mt-3">
+        {% if All_Leads %}
         <form action="{% url 'ledas_filter' %}" method="post">
             {% csrf_token %}
             <div class="row align-items-end">
@@ -113,7 +93,7 @@
                     <select name="Business" id="Business" class="form-control">
                         <option value="">Select Business Type</option>
                         {% for business in BUSINESS_TYPE_CHOICES %}
-                            <option value="{{ business.1 }}">{{ business.1 }}</option>
+                        <option value="{{ business.1 }}">{{ business.1 }}</option>
                         {% endfor %}
                     </select>
                 </div>
@@ -130,50 +110,51 @@
                 </div>
             </div>
         </form>
-    {% endif %}
-</div>
-
-<hr>
-{% if All_Leads %}
-<table id="example" class="table table-striped" style="width:100%">
-    <thead>
-        <tr>
-            <th class="p-2">S.No <i class='bx bx-sort text-primary'></i></th>
-            <th class="p-2">Company Name <i class='bx bx-sort text-primary'></i></th>
-            <th class="p-2">Client Name <i class='bx bx-sort text-primary'></i></th>
-            <th class="p-2">Client Number <i class='bx bx-sort text-primary'></i></th>
-            <th class="p-2">Call Back <i class='bx bx-sort text-primary'></i></th>
-            <th class="p-2">Date Of Join</th>
-            <th class="p-2">Product <i class='bx bx-sort text-primary'></i></th>
-            <th class="p-2">Status <i class='bx bx-sort text-primary'></i></th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for lead in All_Leads reversed%}
-        <tr>
-            <td class="p-2">{{forloop.counter}}</td>
-            <td class="p-2"><a href="{% url 'editlead' pk=lead.pk %}">{{lead.company_name}}</a></td>
-            <td class="p-2">{{lead.client_name}}</td>
-            <td class="p-2">{{lead.client_number}}</td>
-            <td class="p-2">{{lead.call_back}}</td>
-            <td class="p-2">{{lead.created_date}}</td>
-            <td class="p-2">
-                {% for product in lead.products.all %}
-                {{ product }}
-                {% if not forloop.last %}, {% endif %}
-                {% endfor %}
-            </td>
-            <td class="p-2">{{lead.status}}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-{% else %}
-<div class="row">
-    <div class="col-12">
-        <img src="{% static 'images/No_data_for_recent_actions.jpg' %}" width="30%" alt="">
+        {% endif %}
     </div>
-</div>
-{% endif %}
+
+    <hr>
+    {% if All_Leads %}
+    <table id="example" class="table table-striped" style="width:100%">
+        <thead>
+            <tr>
+                <th class="p-2">S.No <i class='bx bx-sort text-primary'></i></th>
+                <th class="p-2">Company Name <i class='bx bx-sort text-primary'></i></th>
+                <th class="p-2">Client Name <i class='bx bx-sort text-primary'></i></th>
+                <th class="p-2">Client Number <i class='bx bx-sort text-primary'></i></th>
+                <th class="p-2">Call Back <i class='bx bx-sort text-primary'></i></th>
+                <th class="p-2">Date Of Join</th>
+                <th class="p-2">Product <i class='bx bx-sort text-primary'></i></th>
+                <th class="p-2">Status <i class='bx bx-sort text-primary'></i></th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for lead in All_Leads reversed%}
+            <tr>
+                <td class="p-2">{{forloop.counter}}</td>
+                <td class="p-2"><a href="{% url 'editlead' pk=lead.pk %}">{{lead.company_name}}</a></td>
+                <td class="p-2">{{lead.client_name}}</td>
+                <td class="p-2">{{lead.client_number}}</td>
+                <td class="p-2">{{lead.call_back}}</td>
+                <td class="p-2">{{lead.created_date}}</td>
+                <td class="p-2">
+                    {% for product in lead.products.all %}
+                    {{ product }}
+                    {% if not forloop.last %}, {% endif %}
+                    {% endfor %}
+                </td>
+                <td class="p-2">{{lead.status}}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    {% else %}
+    <div class="row">
+        <div class="col-12" style="text-align: center;">
+            <img src="{% static 'images/empty_leads.png' %}" width="38%" alt="">
+            <h1 class="fs-5 fw-bold text-black">Create or Import New Leads</h1>
+        </div>
+    </div>
+    {% endif %}
 </section>
 {% endblock %}
